# LaneDetection

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
demo/: run_inference.py
docker/: Dockerfile  build-docker.sh  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  run-docker.sh
scripts/: download_weights.sh
src/lane_detection/: __init__.py  inference.py
tests/: test_lane_detection.py  test_smoke.py
