[project]
name = "lane-detection"
version = "0.1.0"
description = "CLRerNet lane detection inference environment"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.9.0",
    # numpy<2.0 is a hard constraint imposed by mmlab packages.
    "numpy>=1.24.0,<2.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.60.0",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "mmengine==0.10.5",
    "mmcv==2.1.0",
    "mmdet==3.3.0",
    "albumentations==0.4.6",
    "p-tqdm==1.4.2",
    "yapf==0.40.1",
    "setuptools<82",
    "tensorboard>=2.14.0",
    "nms>=0.1.6",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "openmmlab-cu121-torch21"
url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1/index.html"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
mmcv = { index = "openmmlab-mmcv" }

[tool.uv.extra-build-dependencies]
albumentations = ["setuptools<82"]

[[tool.uv.index]]
name = "openmmlab-mmcv"
url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1.0/index.html"
format = "flat"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lane_detection"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

# === Ruff Configuration ===
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",    # isort (Ensures consistent import sorting)
    "N",    # pep8-naming (Ensures snake_case/PascalCase compliance)
    "D",    # pydocstyle (Enforces Google-style docstrings)
    "UP",   # pyupgrade (Auto-upgrades to modern Python syntax)
    "B",    # flake8-bugbear (Identifies common design flaws/bugs)
    "SIM",  # flake8-simplify (Prompts for cleaner, simpler code)
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
# Explicitly enforce Google-style conventions for docstrings
convention = "google"

# === Mypy Configuration ===
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*"]
ignore_missing_imports = true
